Fix alignment on the site header

--- a/src/_scss/_utilities.scss
+++ b/src/_scss/_utilities.scss
@@ -13,4 +13,5 @@
 .pad-block-relative-lg { padding-block: var(--space-relative-lg) }
 .pad-block-relative-xl { padding-block: var(--space-relative-xl) }
 
+.align-self-stretch { align-self: stretch }
 .unstyled { display: none }
